themes/mainroad/assets/css/style.css
/* ... */
mark {
	background-color: #fd5;
}

figure {
	margin: 0 0 20px;
	margin: 0 0 1.25rem;
}

figcaption {
	margin-top: 4px;
	margin-top: .25rem;
	color: #666;
}

figcaption h4 {
	margin: 0;
	color: inherit;
}

pre,
code,
kbd,
samp {
	font-family: {{ $fontMono }};
	font-size: inherit;
}

pre,
code {
	background-color: {{ $boxColor }};
	border: 1px solid {{ $borderColor }};
}

code {
	padding: 0 5px;
	color: #c33;
}

pre {
	display: block;
	padding: 0;
	padding: 1.25rem;
	margin-bottom: 20px;
	margin-bottom: 1.25rem;
	overflow: auto;
	color: #000;
}

pre code {
	padding: 0;
	color: inherit;
	white-space: inherit;
	background: inherit;
	border: 0;
}

kbd {
	padding: 2px 3px;
	color: {{ $backgroundColor }};
	background-color: #2a2a2a;
}

blockquote {
	display: block;
	padding: 5px 0 5px 15px;
	margin: 0 0 20px;
	margin: 0 0 1.25rem;
	line-height: 1.6;
	border-left: 5px solid {{ $highlightColor }};
}

blockquote p:last-child {
	margin: 0;
}

blockquote footer {
	text-align: right;
}

sup,
sub {
	font-size: 10px;
	font-size: .625rem;
	font-style: normal;
}

sup {
	vertical-align: super;
}

sub {
	vertical-align: sub;
}

abbr[title] {
	text-decoration: none;
	cursor: help;
	border-bottom: 1px dotted #000;
}

q {
	font-style: italic;
}

address {
	margin-bottom: 20px;
	margin-bottom: 1.25rem;
	font-family: "Consolas", Courier New, Courier, monospace;
	line-height: 1.5;
}

dl {
	margin: 0 0 10px 20px;
}

dt,
dd {
	display: list-item;
}

dt {
	font-weight: bold;
	list-style-type: square;
}

dd {
	margin-left: 20px;
	list-style-type: circle;
}

select {
	max-width: 100%;
}

.warning {
	padding: 20px 10px;
	text-align: center;
	border: 1px solid #ddd;
}

.warning__icon {
	margin-bottom: 20px;
	fill: #ddd;
}

/* Header */
.header {
	background: #323232;
}

.logo {
	padding: 25px;
	text-align: center;
	margin: auto;
}

.logo__link {
	display: inline-block;
	margin: auto;
}

.logo__item {
	display: inline-block;
	vertical-align: middle;
	margin: auto;
}

.logo__img {
	image-rendering: pixelated;
}

.logo__img_inner {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: auto;
}

.logo__img_padding {
	position: relative;
	overflow: hidden;
	height: 0px;
}

.logo__img_parent {
	max-width: 512px;
	width: 100%;
}

.logo__imagebox {
	position: relative;
	display: flex;
	vertical-align: middle;
	width: 100%;
	flex-direction: column;
	align-items: center;
}

.logo__text {
	text-transform: uppercase;
}

.logo--mixed .logo__item {
	margin: .5rem auto;
}

.logo--mixed .logo__img {
	max-height: 256px;
}

.logo--mixed .logo__text {
	padding: 0 1rem;
}

.logo__title {
	font-size: 32px;
	font-size: 2rem;
	font-weight: 700;
	line-height: 1;
	color: #000;
}

.logo__tagline {
	padding-top: 10px;
	font-size: 20px;
	font-size: 1.25rem;
	font-weight: 700;
	line-height: 1;
	text-transform: uppercase;
	color: #e7d9d3;
	font-family: {{ $fontTitle }};
}

.divider {
	height: 5px;
	margin: 0;
	background: {{ $highlightColor }};
	border: 0;
}

/* Main menu */
.no-js .menu__btn {
	display: none;
}

.menu__btn {
	display: block;
	width: 100%;
	padding: 0;
	font: inherit;
	color: {{ $backgroundColor }};
	background: #2a2a2a;
	border: 0;
	outline: 0;
}

.menu__btn-title {
	position: relative;
	display: block;
	padding: 10px 15px;
	padding: .625rem .9375rem;
	font-weight: 700;
	text-align: right;
	text-transform: uppercase;
	cursor: pointer;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	-o-user-select: none;
	user-select: none;
}

:focus > .menu__btn-title {
	box-shadow: inset 0 0 1px 3px {{ $highlightColor }};
}

button:not(:-moz-focusring):focus > .menu__btn-title {
	box-shadow: none;
}

.menu__btn:focus,
.menu__btn-title:focus {
	outline: 0;
}

.js .menu__btn--active {
	color: {{ $highlightColor }};
}

.menu__list {
	list-style: none;
	background: #2a2a2a;
}

.menu__item:hover {
	background: {{ $highlightColor }};
}

.menu__item:first-child {
	border: 0;
}

.menu__item--active {
	background: {{ $highlightColor }};
}

.menu__link {
	display: block;
	padding: 10px 15px;
	padding: .625rem .9375rem;
	font-weight: 700;
	color: {{ $backgroundColor }};
	text-transform: uppercase;
}

.menu__link:hover {
	color: {{ $backgroundColor }};
}

.js .menu__list {
	position: absolute;
	z-index: 1;
	width: 100%;
	visibility: hidden;
	-webkit-transform: scaleY(0);
	transform: scaleY(0);
	-webkit-transform-origin: top left;
	transform-origin: top left;
}

.js .menu__list--active {
	visibility: visible;
	border-top: 1px solid rgba(255, 255, 255, .1);
	border-bottom: 1px solid rgba(255, 255, 255, .1);
	-webkit-transform: scaleY(1);
	transform: scaleY(1);
}

.menu__list--transition {
	transition: visibility .15s ease, transform .15s ease, -webkit-transform .15s ease;
}

@media screen and (min-width: 767px) {
	.menu {
		border-bottom: 5px solid {{ $highlightColor }};
	}

	.menu__btn {
		display: none;
	}

	.menu__list,
	.js .menu__list {
		position: relative;
		display: -webkit-flex;
		display: flex;
		-webkit-flex-wrap: wrap;
		flex-wrap: wrap;
		visibility: visible;
		border: 0;
		-webkit-transform: none;
		transform: none;
	}

	.menu__item {
		border-left: 1px solid rgba(255, 255, 255, .1);
	}
}

/* Posts/Pages */
.post__header,
.main__header {
	margin-bottom: 20px;
	margin-bottom: 1.25rem;
}

.main__title {
	font-size: 28px;
	font-size: 1.75rem;
}

.main__content {
	margin-bottom: 20px;
	margin-bottom: 1.25rem;
}

.meta {
	font-size: 13px;
	font-size: .8125rem;
	vertical-align: baseline;
}

.meta,
.meta a {
	color: #666;
}

.meta a:hover {
	color: {{ $highlightColor }};
}

.meta__item {
	display: inline;
	margin-left: 15px;
}

.meta__item:first-child {
	margin-left: 0;
}

.meta__icon {
	margin-right: 5px;
	vertical-align: middle;
	fill: #c4c4c4;
}

figure.meta__icon {
	display: inline;
}

.meta__text {
	vertical-align: middle;
}

.post__title {
	margin: 0;
}
/* ... */

